--- a/index.html
+++ b/index.html
@@ -32,70 +32,30 @@
                     <div>Coco</div>
                     <div><i class="far fa-times-circle"></i></div>
                 </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Limonade</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Limonade</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div><div class="thumbnails">
-                    <div>Limonade</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Limonade</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Limonade</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="thumbnails">
-                    <div>Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
+                
             </div>
             <div class="dropdown-section">
-                <div class="dropdown-bl dropdown-ingredients">Ingredients</div>
-                <div class="dropdown-bl dropdown-appliance">Appareils</div>
-                <div class="dropdown-bl dropdown-ustensils">Ustensils</div>
+                <div class="dropdown-bl dropdown-bl-ingredients">
+                    <form action="" class=" dropdown-ingredients">
+                        <input class="input-ingredient" placeholder="Ingredients"></input>
+                    </form>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                
+                <div class="dropdown-bl dropdown-bl-appliance">
+                    <form action="" class="dropdown-appliance">
+                        <input class="input" placeholder="Appareils"></input>
+                        <i class="fas fa-angle-down"></i>
+                    </form>
+                </div>
+
+                <div class="dropdown-bl dropdown-bl-ustensils">
+                    <form action="" class="dropdown-ustensils">
+                        <input class="input" placeholder="Ustensils"></input>
+                        <i class="fas fa-angle-down"></i>
+                    </form>
+                </div>
+
             </div>
             <div class="recipes-section">
             </div>
@@ -105,6 +65,7 @@
         <script src="/scripts/list-ingredient.js"></script>
         <script src="/scripts/recipes-card.js"></script>
         <script src="/scripts/searchBar.js"></script>
+        <script src="/scripts/dropdown.js"></script>
 
     </body>
 </html>
