--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
                 <input type="search" class="searchbar_input" placeholder="Rechercher une recette">
                 <button class="searchbar_button"><i class="fas fa-search"></i></button>
             </form> 
-            <div class="thumbnails-section">
-                <div class="thumbnails">
-                    <div class="thumbnail-name">Coco</div>
-                    <div><i class="far fa-times-circle"></i></div>
-                </div>
-                
+            <div class="tag-section">
             </div>
             <div class="dropdown-section">
                 <div class="dropdown-bl">
