dropdown filter finished

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="dropdown-section">
                 <div class="dropdown-bl">
-                    <form action="" class="dropdown-ingredients" >
+                    <form action="" class=" dropdown dropdown-ingredients" >
                         <input class="input-dropdown input-ingredients" placeholder="Ingredients"></input>
                         <i class="fas fa-angle-down arrow-ingredients"></i>
                     </form>
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div class="dropdown-bl">
-                    <form action="" class="dropdown-appliances" >
+                    <form action="" class="dropdown dropdown-appliances" >
                         <input class="input-dropdown input-appliances" placeholder="Appareils"></input>
                         <i class="fas fa-angle-down arrow-appliances"></i>
                     </form>
@@ -47,7 +47,7 @@
                 </div>
                 
                 <div class="dropdown-bl">
-                    <form action="" class="dropdown-ustensils" >
+                    <form action="" class="dropdown dropdown-ustensils" >
                         <input class="input-dropdown input-ustensils" placeholder="Ustensils"></input>
                         <i class="fas fa-angle-down arrow-ustensils"></i>
                     </form>
