css animation dropdown

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="search" class="searchbar_input" placeholder="Rechercher une recette">
                 <button class="searchbar_button"><i class="fas fa-search"></i></button>
             </div> 
-            <div class="message-error">Aucune recette ne correspond à votre recherche</div>
+            <div class="message-error"></div>
             <div class="tag-section">
             </div>
             <div class="dropdown-section">
