--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
             </div>
 
         </main>
-        <script src="/scripts/recipes.js"></script>
-        <script src="/scripts/recipes-card.js"></script>
-        <script src="/scripts/searchBar.js"></script>
-        <script src="/scripts/dropdown.js"></script>
-        <script src="/scripts/createTag.js"></script>
-
+        <script src="scripts/recipes.js"></script>
+        <script src="scripts/recipes-card.js"></script>
+        <script src="scripts/searchBar.js"></script>
+        <script src="scripts/dropdown.js"></script>
+        <script src="scripts/createTag.js"></script>
 
     </body>
 </html>
