--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
             </div>
             <div class="dropdown-section">
                 <div class="dropdown-bl">
-                    <form action="" class=" dropdown dropdown-ingredients" >
+                    <div action="" class=" dropdown dropdown-ingredients" >
                         <input class="input-dropdown input-ingredients" placeholder="Ingredients"></input>
                         <i class="fas fa-angle-down arrow-ingredients"></i>
-                    </form>
+                    </div>
                     <ul class="tags menu-blue tag-ingredients" ></ul>
                 </div>
                 
                 <div class="dropdown-bl">
-                    <form action="" class="dropdown dropdown-appliances" >
+                    <div action="" class="dropdown dropdown-appliances" >
                         <input class="input-dropdown input-appliances" placeholder="Appareils"></input>
                         <i class="fas fa-angle-down arrow-appliances"></i>
-                    </form>
+                    </div>
                     <ul class="tags menu-green tag-appliances" ></ul>
                 </div>
                 
                 <div class="dropdown-bl">
-                    <form action="" class="dropdown dropdown-ustensils" >
+                    <div action="" class="dropdown dropdown-ustensils" >
                         <input class="input-dropdown input-ustensils" placeholder="Ustensils"></input>
                         <i class="fas fa-angle-down arrow-ustensils"></i>
-                    </form>
+                    </div>
                     <ul class="tags menu-red tag-ustensils" ></ul>
                 </div>
 
