--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
                 <div class="dropdown-bl">
                     <div class="dropdown dropdown-ustensils" >
-                        <input class="input-dropdown input-ustensils" placeholder="Ustensils" type="search">
+                        <input class="input-dropdown input-ustensils" placeholder="Ustensiles" type="search">
                         <i class="fas fa-angle-down arrow-ustensils"></i>
                     </div>
                     <ul class="tags menu-red tag-ustensils" ></ul>
